...
  <string name="back">Back</string>
  <string name="bitwarden">Bitwarden</string>
  <string name="cancel">Cancel</string>
  <string name="copy">Copy</string>
  <string name="copy_password">Copy password</string>
...
  <string name="email_us">Email us</string>
  <string name="email_us_description">Email us directly to get help or leave feedback.</string>
  <string name="enter_pin">Enter your PIN code</string>
  <string name="favorites">Favorites</string>
  <string name="file_bug_report">File a bug report</string>
...
  <string name="log_in_verb">Log in</string>
  <string name="log_in_noun">Login</string>
  <string name="log_out">Log out</string>
  <string name="logout_confirmation">Are you sure you want to log out?</string>
  <string name="remove_account">Remove account</string>
...
  <string name="item_name_required">Item name (required)</string>
  <string name="send_name_required">"Send name (required)"</string>
  <string name="no">No</string>
  <string name="notes">Notes</string>
  <string name="private_notes">Private notes</string>
...
  <string name="show">Show</string>
  <string name="item_deleted">Item deleted</string>
  <string name="submit">Submit</string>
  <string name="sync">Sync</string>
  <string name="thank_you">Thank you</string>
...
  <string name="visit_our_website">Visit our website</string>
  <string name="website">Website</string>
  <string name="yes">Yes</string>
  <string name="account">Account</string>
  <string name="account_created">Your new account has been created! You may now log in.</string>
...
  <string name="length">Length</string>
  <string name="lock">Lock</string>
  <string name="fifteen_minutes">15 minutes</string>
  <string name="one_hour">1 hour</string>
  <string name="one_minute">1 minute</string>
  <string name="four_hours">4 hours</string>
  <string name="immediately">Immediately</string>
  <string name="vault_timeout">Vault timeout</string>
  <string name="vault_timeout_action">Vault timeout action</string>
...
  <string name="two_step_login">Two-step login</string>
  <string name="unlock_with">Unlock with %1$s</string>
  <string name="unlock_with_pin">Unlock with PIN code</string>
  <string name="validating">Validating</string>
  <string name="verification_code">Verification code</string>
...
  <string name="export_vault">Export vault</string>
  <string name="lock_now">Lock now</string>
  <string name="pin">PIN</string>
  <string name="unlock">Unlock</string>
  <string name="unlock_vault">Unlock vault</string>
  <string name="thirty_minutes">30 minutes</string>
  <string name="set_pin_description">Your PIN must be at least 4 characters. Your PIN settings will be reset if you ever fully log out of the application.</string>
  <string name="logged_in_as_on">Logged in as %1$s on %2$s.</string>
...
  <string name="dark">Dark</string>
  <string name="light">Light</string>
  <string name="five_minutes">5 minutes</string>
  <string name="ten_seconds">10 seconds</string>
  <string name="thirty_seconds">30 seconds</string>
...
  <string name="exit">Exit</string>
  <string name="exit_confirmation">Are you sure you want to exit Bitwarden?</string>
  <string name="require_master_password_on_app_restart">Require master password on app restart?</string>
  <string name="pin_require_master_password_restart">Do you want to require unlocking with your master password when the application is restarted?</string>
  <string name="black">Black</string>
...
  <string name="view_all_login_options">View all log in options</string>
  <string name="this_request_is_no_longer_valid">This request is no longer valid</string>
  <string name="pending_log_in_requests">Pending login requests</string>
  <string name="decline_all_requests">Decline all requests</string>
  <string name="are_you_sure_you_want_to_decline_all_pending_log_in_requests">Are you sure you want to decline all pending login requests?</string>
...
